Corrected modal, moreover corrected navigation mobile and navigation desktop. Corrected offer's section

--- a/scss/_hamburger.scss
+++ b/scss/_hamburger.scss
@@ -1,7 +1,7 @@
 .burger-btn {
 	position: fixed;
-	top: 20px;
-	right: 20px;
+	top: 3em;
+	right: 3em;
 	background: none;
 	border: 1px solid transparent;
 	padding: 1em;
