--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -1,7 +1,21 @@
 @media(min-width: 992px){
     .burger-btn {
-        top: 50px;
-        right: 50px;
+        display: none;
+    }
+
+    .nav-mobile{
+        display: none;
+    }
+    
+    .nav-desktop{
+        display: flex;
+        justify-content: right;
+    }
+
+    .nav__item{
+        position: relative;
+        right: 2.5em;
+        font-size: 1.8rem;
     }
 
     .header{
