--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -9,4 +9,16 @@
         }
  
     }
+
+    .offer {
+		&__cards {
+			grid-template-columns: repeat(3, 1fr);
+			grid-template-columns: repeat(3, 1fr);
+		}
+
+        &__card:nth-child(9){
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+	}
 }
