--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -1,3 +1,12 @@
-@media(min-width: 576px){
+@media (min-width: 576px) {
+	.offer {
+		&__cards {
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-columns: repeat(2, 1fr);
+		}
 
+        &__card:nth-child(9){
+            grid-column: 1/3;
+        }
+	}
 }
