--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,9 +40,9 @@ body {
 	opacity: 0;
 	visibility: hidden;
 	z-index: 1000;
-	transition: opacity .3s, background-color .3s;
+	transition: opacity 0.3s, background-color 0.3s;
 	&--active {
-		visibility: visible;		
+		visibility: visible;
 		opacity: 1;
 		background-color: rgba(0, 0, 0, 0.705);
 	}
@@ -50,7 +50,7 @@ body {
 
 .modal {
 	position: absolute;
-	top: 55%;
+	top: 50%;
 	left: 50%;
 	width: 300px;
 	height: 300px;
@@ -59,12 +59,10 @@ body {
 	text-align: center;
 	border-radius: 20px;
 	overflow: hidden;
-	visibility: hidden;
-	transition: top .5s, background-color .3s;
-
+	opacity: 0;
+	transition: opacity 0.3s, background-color 0.3s;
 	&--active {
-		visibility: visible;
-		top: 50%;
+		opacity: 1;
 	}
 
 	&__cross {
@@ -179,25 +177,66 @@ body {
 .nav {
 	&__item {
 		display: inline-block;
+		text-transform: uppercase;
+		text-decoration: none;
 		margin: 0.5em;
 		padding: 0.5em;
-		font-size: 2.3rem;
-		color: $dirty-white;
-		text-decoration: none;
-		text-transform: uppercase;
+		font-size: 2.5rem;
+		color: #fff;
 		transition: color 0.3s;
 
-		&:hover {
-			color: $main-color;
+		//animation on desktop
+		&::after,
+		&::before {
+			content: '';
+			position: absolute;
+			width: 0;
+			bottom: 0;
+			border-bottom: 2.5px solid rgb(13, 119, 190);
+			transition: width 0.5s;
+		}
+
+		&::before {
+			right: 50%;
+		}
+
+		&::after {
+			left: 50%;
+		}
+
+		&:hover::before,
+		&:hover::after {
+			width: 50%;
+		}
+		//animation on mobile
+		&--mobile {
+			transition: color 0.3s;
+
+			&::before,
+			&::after {
+				display: none;
+			}
+			&:hover {
+				color: $dark-blue;
+			}
 		}
 	}
 
 	&-desktop {
 		display: none;
+		position: fixed;
+		top: 0;
+		width: 100%;
+		z-index: 10;
+		transition: background-color .3s;
+
+		&--active{
+			background-color: rgba(10, 25, 44, 0.918);
+		}
 	}
 
 	&-mobile {
-		position: absolute;
+		position: fixed;
 		top: 0;
 		left: 0;
 		right: 0;
@@ -209,12 +248,16 @@ body {
 		background-color: rgb(10, 9, 9);
 		z-index: 10;
 		transform: translateX(-102%);
-		transition: transform 0.3s;
+		transition: transform 0.5s;
 
 		&--active {
 			transform: translateX(0);
 		}
 	}
+}
+
+.fixed-body {
+	overflow: hidden;
 }
 
 // ----------------
@@ -256,24 +299,27 @@ body {
 	}
 
 	&__cards {
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-		margin-top: 3em;
+		position: relative;
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr;
+		gap: 2em 2.5em;
+		padding: 1em 2em;
+		margin-top: 2em;
 	}
 
 	&__card {
 		position: relative;
+		left: 50%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-		margin: 1em;
-		width: 250px;
-		height: 200px;
-		border-radius: 35px;
-		background-color: rgb(21, 39, 58);
+		height: 190px;
+		transform: translate(-50%);
 		text-transform: uppercase;
+		border-radius: 20px;
+		background-color: rgb(21, 39, 58);
 
 		&-title {
 			margin: 0.5em 0em;
@@ -286,7 +332,7 @@ body {
 			position: absolute;
 			bottom: 20px;
 			padding: 0.8em 1.5em;
-			border-radius: 15px;
+			border-radius: 18px;
 			background-color: rgb(24, 94, 168);
 
 			&::before {
